# variable_precision

./: .gitignore  CMakeLists.txt  communication.cpp  communication.h  main.cpp  notes.txt  pagerank_test.cpp  pagerank_test.h  performance_tests.h  pi_benchmarks.cpp  pi_benchmarks.h  power_iteration.cpp  power_iteration.h  seg_templated.notes.txt  spmv.h  spmv_benchmark.cpp  spmv_benchmark.h  test_main.cpp
linalg/: CMakeLists.txt
linalg/power_iteration/: poweriteration.cpp  poweriteration.h
linalg/spmv/: spmv_fixed.cpp  spmv_fixed.h
matrix_formats/: CMakeLists.txt  csr.cpp  csr.hpp
power_iteration/: pagerank.cpp  pagerank.h  pi_util.cpp  pi_util.h  poweriteration.cpp  poweriteration.h  pr_poweriteration.cpp  pr_poweriteration.h
segmentation/: CMakeLists.txt  bitwise_helper.cpp  bitwise_helper.h  seg_benchmark.cpp  seg_uint.h  segmentation.cpp  segmentation.h  segmentation_test.cpp
segmentation/seg_char/: CMakeLists.txt  seg_char.h
segmentation/seg_uint/: CMakeLists.txt  seg_uint.cpp  seg_uint.h  segmentation_test.cpp  segmentation_test.h
segmentation_char/: CMakeLists.txt  segmentation_char.h
spmv/: pr_spmv.cpp  pr_spmv.h  spmv_fixed.cpp  spmv_fixed.h
util/: CMakeLists.txt  util.hpp
