ADD_LIBRARY(formats)

TARGET_SOURCES(formats PRIVATE csr.hpp csr.cpp)

TARGET_LINK_LIBRARIES(formats PRIVATE util)

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    TARGET_COMPILE_OPTIONS(formats PRIVATE /W4 /WX)
ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    TARGET_COMPILE_OPTIONS(formats PRIVATE -Wall -Wextra -pedantic -Werror)
ELSEIF()
    MESSAGE(FATAL_ERROR "Neither GCC nor MSVC detected!")
ENDIF()