ADD_SUBDIRECTORY(seg_uint)
ADD_SUBDIRECTORY(seg_char)

ADD_EXECUTABLE(seg_benchmark seg_benchmark.cpp)

TARGET_LINK_LIBRARIES(seg_benchmark PRIVATE seg_uint seg_char)

TARGET_COMPILE_OPTIONS(seg_benchmark PRIVATE -O3)

FIND_PACKAGE(MPI REQUIRED)
TARGET_INCLUDE_DIRECTORIES(seg_benchmark PRIVATE ${MPI_INCLUDE_PATH})
TARGET_LINK_LIBRARIES(seg_benchmark PRIVATE ${MPI_LIBRARIES})

IF(MPI_COMPILE_FLAGS)
    SET_TARGET_PROPERTIES(seg_benchmark PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
ENDIF()

IF(MPI_LINK_FLAGS)
    SET_TARGET_PROPERTIES(seg_benchmark PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
ENDIF()