ADD_LIBRARY(seg_uint)

set_target_properties(seg_uint PROPERTIES LINKER_LANGUAGE CXX)
TARGET_SOURCES(seg_uint PUBLIC seg_uint.h seg_uint.cpp)
TARGET_INCLUDE_DIRECTORIES(seg_uint PUBLIC .)

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    TARGET_COMPILE_OPTIONS(seg_uint PRIVATE /W3 /WX)
ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    TARGET_COMPILE_OPTIONS(seg_uint PRIVATE -Wall -Wextra -pedantic -Werror)
ELSEIF()
    MESSAGE(FATAL_ERROR "Neither GCC nor MSVC detected!")
ENDIF()
